--- a/localization/english/PAX_regiments_l_english.yml
+++ b/localization/english/PAX_regiments_l_english.yml
@@ -97,7 +97,7 @@
  persian_noble_cataphracts_flavor: "Men with big spears on heavily armored horses, ready to hammer the enemy lines with extreme force."
  celtic_noble_warband: "Celtic Noble Warband"
  celtic_noble_warband_flavor: "Nobles from the Celtic Elites extremely skilled and very good tacticians ready to kill."
- illyrian_nobles: "Illyirian Nobles"
+ illyrian_nobles: "Illyrian Nobles"
  illyrian_nobles_flavor: "Noble people from Illyria, very strong, using anger as fuel."
  egyptian_royal_guards: "Egyptian Royal Guards"
  egyptian_royal_guards_flavor: "This infantry unit guards the Egyptian elites using big axes and solid circular shields."
