--- a/localization/english/culture/innovations/PAXtribal_innovations_l_english.yml
+++ b/localization/english/culture/innovations/PAXtribal_innovations_l_english.yml
@@ -24,7 +24,7 @@
  innovation_astronomy_desc: "Look at the sky during the night, you see those lights? What do they mean? Are they Gods? Could be, or maybe its a map. Decode that map and who knows what kind of riches are you going to find. Maybe not even riches, you could uncover the greatest mysteries of humanity. Oh god, maybe you should think about that: are you actually ready to find them out?"
  innovation_extensive_trading: "Extensive Trading" 
  innovation_extensive_trading_desc: "Autarky you say, uh? Well look at all of that gold you get while trading, looks good doesn't it? At the end of the day you do not need all of those metals, but you need gold. You always need it." 
- innovation_casus_belli: "Casus Belli"
+ innovation_casus_belli: "Bellum Justum"
  innovation_casus_belli_desc: "Why do you want to declare War? Why should your men fight on foreign lands away from their homes, wives and childs? Well you'd better explain it to them in a way that actually hooks them up, or be ready to never rule those lands." 
 
  # Cultural Innovations Fighters
@@ -42,5 +42,5 @@
 
  # Customs
  can_change_to_city_state: "Can change your government type to [GetGovernment('city-state_government').GetName]"
- unlock_african_elephants_if: "Can recruit [GetMaA('african_elephants').GetName] if your [culture|E] is in [GetGeographicalRegion('PAXworld_africa').GetName] [region|E] as [men_at_arms|E]"
- unlock_indian_elephants_if: "Can recruit [GetMaA('indian_elephants').GetName] if your [culture|E] is in [GetGeographicalRegion('PAXworld_east_india').GetName] [region|E] as [men_at_arms|E]"
+ unlock_african_elephants_if: "Can recruit [GetMaA('african_elephants').GetName] as [men_at_arms|E] if your [culture|E] is in [GetGeographicalRegion('PAXworld_africa').GetName] [region|E]"
+ unlock_indian_elephants_if: "Can recruit [GetMaA('indian_elephants').GetName] as [men_at_arms|E] if your [culture|E] is in [GetGeographicalRegion('PAXworld_east_india').GetName] [region|E]"
