--- a/localization/english/religion/religion_iberian_l_english.yml
+++ b/localization/english/religion/religion_iberian_l_english.yml
@@ -34,6 +34,21 @@
  celtiberianism_old_adj: "Old Celtiberian"
  celtiberianism_old_adherent: "Old Celtiberio"
  celtiberianism_old_adherent_plural: "Old Celtiberios"
+ gallaecianism_old: "Old Gallaecianism"
+ gallaecianism_old_adj: "Old Gallaecianism"
+ gallaecianism_old_adherent: "Old Gallaecio"
+ gallaecianism_old_adherent_plural: "Old Gallaecians"
+ gallaecianism_old_desc: "A branch of the Celtic belief, unlike the Celts in Gaul, the Gallaecians rarely had Druids."
+ lusitianisch: "Lusitianisch"
+ lusitianisch_adj: "Lusitianisch"
+ lusitianisch_adherent: "Lusitianio"
+ lusitianisch_adherent_plural: "Lusitianier"
+ lusitianisch_desc: "A branch of the Celtic belief, unlike the Celts in Gaul, the Lusitianier rarely had Druids."
+ lusitianisch_old: "Old Lusitianisch"
+ lusitianisch_old_adj: "Old Lusitianisch"
+ lusitianisch_old_adherent: "Old Lusitianio"
+ lusitianisch_old_adherent_plural: "Old Lusitianier"
+ lusitianisch_old_desc: "A branch of the Celtic belief, unlike the Celts in Gaul, the Lusitianier rarely had Druids."
 
  holy_order_of_solisguard: "Order of Solisguard"
  holy_order_guardians_of_terra_mater: "Order of Terra Mater"
