--- a/localization/english/culture/traditions/cultural_heritages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_heritages_l_english.yml
@@ -50,6 +50,8 @@
  heritage_siberia_collective_noun: "Siberians"
  heritage_caucasian_name: "Caucasian"
  heritage_caucasian_collective_noun: "Caucasian"
+ heritage_semitic_name: "Semitisch"
+ heritage_sayhadic_name: "Sayhadic"
 
 #Vanilla Heritages
  heritage_generic_label_desc:0 "Each [heritage|E] defines a common origin for related [cultures|E]' customs and mannerisms, either as something they descend from or have wholesale adopted."
