--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -39,3 +39,6 @@
  language_kartvelian_name: "Kartvelisch"
  language_prakrit_name: "Prakrit"
  language_lusitanisch_name: "Lusitianian"
+ language_nabataisch_name: "Nabataisch"
+ language_aramaeic_name: "Aramaeic"
+ language_akkadisch_name: "Akkadian"
