Some culture changes

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -28,9 +28,9 @@
  makedonian: "Makédonian"
  makedonian_prefix: "Makédonian"
  makedonian_collective_noun: "Makédonians"
- seleucid: "Yauna"
- seleucid_prefix: "Yauna"
- seleucid_collective_noun: "Yauna"
+ seleucid: "Hellenic Syrian"
+ seleucid_prefix: "Hellenic Syrian"
+ seleucid_collective_noun: "Hellenic Syrians"
  ptolemaic: "Ptolemaic"
  ptolemaic_prefix: "Ptolemaic"
  ptolemaic_collective_noun: "Ptolemaics"
@@ -204,7 +204,13 @@
  arab_collective_noun: "Arabs"
  minaean: "Minaean"
  minaean_prefix: "Minaean"
- minaean_collective_noun: "Minaear"
+ minaean_collective_noun: "Minaeans"
+ southern-thamudic: "Southern Thamudic"
+ southern-thamudic_prefix: "Southern Thamudic"
+ southern-thamudic_collective_noun: "Thamudics"
+ northern-thamudic: "Northern Thamudic"
+ northern-thamudic_prefix: "Northern Thamudic"
+ northern-thamudic_collective_noun: "Thamudics"
  hadramaut: "Hadramaut"
  hadramaut_prefix: "Hadramaut"
  hadramaut_collective_noun: "Hadramauts"
@@ -217,9 +223,9 @@
  nabataean: "Nabataean"
  nabataean_prefix: "Nabataean"
  nabataean_collective_noun: "Nabataeas"
- aramaeer: "Aramaeer"
- aramaeer_prefix: "Aramaeer"
- aramaeer_collective_noun: "Aramaeer"
+ aramaeer: "Syrian"
+ aramaeer_prefix: "Syrian"
+ aramaeer_collective_noun: "Syrians "
  pax_assyrian: "Assyrian"
  pax_assyrian_prefix: "Assyrian"
  pax_assyrian_collective_noun: "Assyrians"
