--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -43,9 +43,24 @@
  baktrian: "Baktrian"
  baktrian_prefix: "Baktrian"
  baktrian_collective_noun: "Baktrians"
- anatolian: "Anatolian"
- anatolian_prefix: "Anatloian"
- anatolian_collective_noun: "Anatolians"
+ phrygian: "Phrygian"
+ phrygian_prefix: "Phrygian"
+ phrygian_collective_noun: "Phrygians"
+ lydian: "Lydian"
+ lydian_prefix: "Lydian"
+ lydian_collective_noun: "Lydians"
+ lykian: "Lykian"
+ lykian_prefix: "Lykian"
+ lykian_collective_noun: "Lykians"
+ karian: "Karian"
+ karian_prefix: "Karian"
+ karian_collective_noun: "Karians"
+ paphlagonian: "Paphlagonian"
+ paphlagonian_prefix: "Paphlagonian"
+ paphlagonian_collective_noun: "Paphlagonians"
+ ionian: "Ionian"
+ ionian_prefix: "Ionian"
+ ionian_collective_noun: "Ionians"
  pontus: "Pontus"
  pontus_prefix: "Pontus"
  pontus_collective_noun: "Pontier"
@@ -106,6 +121,9 @@
  gaelic: "Gaelic"
  gaelic_prefix: "Gaelic"
  gaelic_collective_noun: "Gaels"
+ galatian: "Galatian"
+ galatian_prefix: "Galatian"
+ galatian_collective_noun: "Galatians"
  celtiberian: "Celtiberian"
  celtiberian_prefix: "Celtiberian"
  celtiberians_collective_noun: "Celtiberians"
@@ -190,6 +208,9 @@
  persian: "Persian"
  persian_prefix: "Persian"
  persian_collective_noun: "Persians"
+ achaemenidan: "Achaemenidan"
+ achaemenidan_prefix: "Achaemenidan"
+ achaemenidan_collective_noun: "Achaemenidans"
  med: "Med"
  med_prefix: "Med"
  med_collective_noun: "Meds"
