--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -49,12 +49,12 @@
  lydian: "Lydian"
  lydian_prefix: "Lydian"
  lydian_collective_noun: "Lydians"
- lykian: "Lykian"
- lykian_prefix: "Lykian"
- lykian_collective_noun: "Lykians"
- karian: "Karian"
- karian_prefix: "Karian"
- karian_collective_noun: "Karians"
+ lycian: "Lycian"
+ lycian_prefix: "Lycian"
+ lycian_collective_noun: "Lycians"
+ carian: "Carian"
+ carian_prefix: "Carian"
+ carian_collective_noun: "Carians"
  paphlagonian: "Paphlagonian"
  paphlagonian_prefix: "Paphlagonian"
  paphlagonian_collective_noun: "Paphlagonians"
@@ -67,6 +67,9 @@
  cappadocian: "Cappadocian"
  cappadocian_prefix: "Cappadocian"
  cappadocian_collective_noun: "Cappadocier"
+ cilician: "Cilician"
+ cilician_prefix: "Cilician"
+ cilician_collective_noun: "Cilicians"
  
  #african
  nubian: "Nubian"
@@ -208,9 +211,6 @@
  persian: "Persian"
  persian_prefix: "Persian"
  persian_collective_noun: "Persians"
- achaemenidan: "Achaemenidan"
- achaemenidan_prefix: "Achaemenidan"
- achaemenidan_collective_noun: "Achaemenidans"
  med: "Med"
  med_prefix: "Med"
  med_collective_noun: "Meds"
