--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -48,3 +48,5 @@
  language_galatian_name: "Galatian"
  language_paphlagonian_name: "Paphlagonian"
  language_mysian_name: "Mysian"
+ language_luwian_name: "Luwian"
+ language_carian_name: "Carian"
