--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -189,9 +189,21 @@
  pax_armenian: "Armenian"
  pax_armenian_prefix: "Armenian"
  pax_armenian_collective_noun: "Armenians"
- antique_kartvelian: "Caucasian Albanian"
- antique_kartvelian_prefix: "Caucasian Albanian"
- antique_kartvelian_collective_noun: "Caucasian Albanians"
+ kartvelian: "Kartvelian"
+ kartvelian_prefix: "Kartvelian"
+ kartvelian_collective_noun: "Kartvelians"
+ colchian: "Colchian"
+ colchian_prefix: "Colchian"
+ colchian_collective_noun: "Colchians"
+ maotian: "Maotian"
+ maotian_prefix: "Maotian"
+ maotian_collective_noun: "Maotians"
+ albanian: "Albanian"
+ albanian_prefix: "Albanian"
+ albanian_collective_noun: "Albanians"
+ caspian: "Caspian"
+ caspian_prefix: "Caspian"
+ caspian_collective_noun: "Caspians"
  
  #slavic
  slavic: "Slavic"
