--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -50,3 +50,7 @@
  language_mysian_name: "Mysian"
  language_luwian_name: "Luwian"
  language_carian_name: "Carian"
+ language_albanian_name: "Albanian"
+ language_caspian_name: "Caspian"
+ language_scythian_name: "Scythian"
+ language_baltic_name: "Baltic"
