--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24494,6 +24494,7 @@
  d_liban: "Liban"
  d_liban_adj: "Libanese"
  b_kerch: "Kimmerikon"
+ b_chersonesus: "Chersonesus"
  c_kerch: "Kimmerikon"
  c_kerch_adj: "Kimmerian"
  b_tmutarakan: "Herranonassa"
