--- a/localization/english/core_l_english.yml
+++ b/localization/english/core_l_english.yml
@@ -821,7 +821,7 @@
 
  # PAX ROMANA
 
- # BCE GAME DATE, ALL CREDITS TO THE APTHEOSIS MOD TEAM
+ # BCE GAME DATE, ALL CREDITS TO THE APOTHEOSIS MOD TEAM
 
  #It takes the absolute value of the difference between the actual start date and the "rome_birth_start_date" value and displays it as the start date.
  #Then, it checks if the started date value is greater than the "rome_birth_start_date" value and if it is, it writes it as "CE", if it is not, then it writes it as "BCE"
