--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -40,9 +40,9 @@
  masselian: "Masselian"
  masselian_prefix: "Masselic"
  masselian_collective_noun: "Masselians"
- baktrian: "Baktrian"
- baktrian_prefix: "Baktrian"
- baktrian_collective_noun: "Baktrians"
+ baktrian: "Bactrian"
+ baktrian_prefix: "Bactrian"
+ baktrian_collective_noun: "Bactrians"
  phrygian: "Phrygian"
  phrygian_prefix: "Phrygian"
  phrygian_collective_noun: "Phrygians"
@@ -61,9 +61,9 @@
  ionian: "Ionian"
  ionian_prefix: "Ionian"
  ionian_collective_noun: "Ionians"
- pontus: "Pontus"
- pontus_prefix: "Pontus"
- pontus_collective_noun: "Pontier"
+ pontic: "Pontic"
+ pontic_prefix: "Pontic"
+ pontic_collective_noun: "Pontics"
  cappadocian: "Cappadocian"
  cappadocian_prefix: "Cappadocian"
  cappadocian_collective_noun: "Cappadocier"
@@ -195,9 +195,9 @@
  colchian: "Colchian"
  colchian_prefix: "Colchian"
  colchian_collective_noun: "Colchians"
- maotian: "Maotian"
- maotian_prefix: "Maotian"
- maotian_collective_noun: "Maotians"
+ maotian: "Maeotian"
+ maotian_prefix: "Maeotian"
+ maotian_collective_noun: "Maeotians"
  albanian: "Albanian"
  albanian_prefix: "Albanian"
  albanian_collective_noun: "Albanians"
@@ -212,12 +212,12 @@
  slavic: "Slavic"
  slavic_prefix: "Slavic"
  slavic_collective_noun: "Slavs"
- saioi: "Saioi"
- saioi_prefix: "Saioi"
- saioi_collective_noun: "Saiois"
- lazyges: "Lazygian"
- lazyges_prefix: "Lazygian"
- lazyges_collective_noun: "Lazygians"
+ scythian: "Scythian"
+ scythian_prefix: "Scythian"
+ scythian_collective_noun: "Scythians"
+ legian: "Legian"
+ legian_prefix: "Legian"
+ legian_collective_noun: "Legians"
  roxolanian: "Roxolanian"
  roxolanian_prefix: "Roxolanian"
  roxolanian_collective_noun: "Roxolanians"
