new landed titles

--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24698,3 +24698,19 @@
  cn_alexandreia_adj: "Alexandreian"
  cn_ptolemais: "Ptolemais"
  cn_ptolemais_adj: "Ptolemaic"
+ d_garamantia: "Garamantia"
+ d_garamantia_adj: "Garamantian"
+ c_garamantia: "Garamantia"
+ c_garamantia_adj: "Garamantian"
+ c_nasamonia: "Nasamonia"
+ c_nasamonia_adj: "Nasamonian"
+ c_paraetonium: "Paraetonium"
+ c_paraetonium_adj: "Paraetonian"
+ c_sala: "Sala"
+ c_sala_adj: "Salan"
+ b_amadat_tinghert: "Amadat Tinghert"
+ b_mema: "Mema"
+ b_augila: "Augila"
+ b_gialo: "Gialo"
+ b_siwaa: "Siwa"
+ b_farafra: "Farafra"
