add some cultures
add some cultures and languages, change Phoenician heritage to Caananite Heritage

--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -75,9 +75,21 @@
  nubian: "Nubian"
  nubian_prefix: "Nubian"
  nubian_collective_noun: "Nubians"
+ pax_ethiopian: "Ethiopian"
+ pax_ethiopian_prefix: "Ethiopian"
+ pax_ethiopian_collective_noun: "Ethiopians"
+ pax_blemmyian: "Blemmyian"
+ pax_blemmyian_prefix: "Blemmyian"
+ pax_blemmyian_collective_noun: "Blemmyians"
  berber: "Berber"
  berber_prefix: "Berber"
  berber_collective_noun: "Berbers"
+ numidian: "Numidian"
+ numidian_prefix: "Numidian"
+ numidian_collective_noun: "Numidians"
+ pax_maurian: "Maurian"
+ pax_maurian_prefix: "Maurian"
+ pax_maurian_collective_noun: "Maurians"
  egyptian: "Egyptian"
  egyptian_prefix: "Egyptian"
  egyptian_collective_noun: "Egyptians"
@@ -291,9 +303,9 @@
  phoenecian: "Phoenecian"
  phoenecian_prefix: "Phoenecian"
  phoenecian_collective_noun: "Phoenecians"
- carthaginian: "Carthaginian"
- carthaginian_prefix: "Carthaginian"
- carthaginian_collective_noun: "Carthaginians"
+ carthaginian: "Punic"
+ carthaginian_prefix: "Punic"
+ carthaginian_collective_noun: "Punics"
 
  #balcan
  illyrian: "Illyrian"
