--- a/localization/english/culture/traditions/cultural_heritages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_heritages_l_english.yml
@@ -36,8 +36,8 @@
  heritage_indian_collective_noun: "Indians"
  heritage_arabian_name: "Arabian"
  heritage_arabian_collective_noun: "Arabs"
- heritage_phoenecian_name: "Phoenecian"
- heritage_phoenecian_collective_noun: "Phoenecians"
+ heritage_phoenecian_name: "Canaanite"
+ heritage_phoenecian_collective_noun: "Canaanits"
  heritage_persian_name: "Persian"
  heritage_persian_collective_noun: "Persians"
  heritage_balcan_name: "Balcan"
