--- a/localization/english/culture/traditions/cultural_languages_l_english.yml
+++ b/localization/english/culture/traditions/cultural_languages_l_english.yml
@@ -54,3 +54,4 @@
  language_caspian_name: "Caspian"
  language_scythian_name: "Scythian"
  language_baltic_name: "Baltic"
+ language_merotisch_name: "Merotisch"
