--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -81,6 +81,9 @@
  nubian: "Nubian"
  nubian_prefix: "Nubian"
  nubian_collective_noun: "Nubians"
+ libyan: "Libyan"
+ libyan_prefix: "Libyan"
+ libyan_collective_noun: "Libyans"
  pax_ethiopian: "Ethiopian"
  pax_ethiopian_prefix: "Ethiopian"
  pax_ethiopian_collective_noun: "Ethiopians"
