--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -317,6 +317,12 @@
  illyrian: "Illyrian"
  illyrian_prefix: "Illyrian"
  illyrian_collective_noun: "Illyrians"
+ liburnian: "Liburnian"
+ liburnian_prefix: "Liburnian"
+ liburnian_collective_noun: "Liburnians"
+ messapian: "Messapian"
+ messapian_prefix: "Messapian"
+ messapian_collective_noun: "Messapians"
  dacian: "Dacian"
  dacian_prefix: "Dacian"
  dacian_collective_noun: "Dacians"
