some namelist fixes + missing localization

--- a/localization/english/religion/religion_iberian_l_english.yml
+++ b/localization/english/religion/religion_iberian_l_english.yml
@@ -39,6 +39,11 @@
  gallaecianism_old_adherent: "Old Gallaecio"
  gallaecianism_old_adherent_plural: "Old Gallaecians"
  gallaecianism_old_desc: "A branch of the Celtic belief, unlike the Celts in Gaul, the Gallaecians rarely had Druids."
+ gallaecianism: "Gallaecianism"
+ gallaecianism_adj: "Gallaecianism"
+ gallaecianism_adherent: "Gallaecio"
+ gallaecianism_adherent_plural: "Gallaecians"
+ gallaecianism_desc: "A branch of the Celtic belief, unlike the Celts in Gaul, the Gallaecians rarely had Druids."
  lusitianisch: "Lusitanian"
  lusitianisch_adj: "Lusitanian"
  lusitianisch_adherent: "Lusitianio"
