--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -24086,7 +24086,7 @@
  b_messina: "Messana"
  c_messina: "Messana"
  c_messina_adj: "Messanian"
- b_catania: "Catana"
+ b_catania: "Catania"
  b_syracusa: "Syracuse"
  c_siracusa: "Syracuse"
  c_siracusa_adj: "Syracusian"
@@ -24714,3 +24714,7 @@
  b_gialo: "Gialo"
  b_siwaa: "Siwa"
  b_farafra: "Farafra"
+ d_kasoghia: "Kasoghia"
+ d_kasoghia_adj: "Kasoghisch"
+ d_mauria: "Mauria"
+ d_mauria_adj: "Maurian"
