--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -9547,7 +9547,6 @@
  b_tafraoua-sebdou: "Tafraoua-Sebdou"
  b_taft: "Taft"
  b_tagadur: "Tagadur"
- b_taganrog: "Taganrog"
  b_tagara: "Tagara"
  b_tagawst: "Tagawst"
  b_taghaza: "Taghaza"
@@ -24718,3 +24717,22 @@
  d_kasoghia_adj: "Kasoghisch"
  d_mauria: "Mauria"
  d_mauria_adj: "Maurian"
+ c_samos: "Samos"
+ c_samos_adj: "Samosian"
+ c_nikomedia: "Nikomedia"
+ c_nikomedia_adj: "Nikomedian"
+ c_halikarnassos: "Halikarnassos"
+ c_halikarnassos_adj: "Halikarnassian"
+ c_hadrianoi: "Hadrianoi"
+ c_hadrianoi_adj: "Hadrianoian"
+ c_adrassos: "Adrassos"
+ c_adrassos_adj: "Adrassian"
+ c_chersonesus: "Chersonesus"
+ c_chersonesus_adj: "Chersonesian"
+ c_kremnoi: "Kremnoi"
+ c_kremnoi_adj: "Kremnoian"
+ b_taganrog: "Kremnoi"
+ c_millerovo: "Millerovo"
+ c_millerovo_adj: "Millerovian"
+ d_lycia: "Lycia"
+ d_lycia_adj: "Lycian"
