--- a/localization/english/culture/cultures_l_english.yml
+++ b/localization/english/culture/cultures_l_english.yml
@@ -104,7 +104,7 @@
  egyptian_collective_noun: "Egyptians"
 
  #iberian
- iberian: "Iberian"
+ #iberian: "Iberian"
  iberian_prefix: "Iberian"
  iberian_collective_noun: "Iberians"
  lusitian: "Lusitian"
@@ -227,10 +227,10 @@
  heniochan_collective_noun: "Heniochans"
  
  #Scythian
- slavic: "Slavic"
+ #slavic: "Slavic"
  slavic_prefix: "Slavic"
  slavic_collective_noun: "Slavs"
- scythian: "Scythian"
+ #scythian: "Scythian"
  scythian_prefix: "Scythian"
  scythian_collective_noun: "Scythians"
  legian: "Legian"
@@ -271,7 +271,7 @@
  elamitisch: "Parthian"
  elamitisch_prefix: "Parthian"
  elamitisch_collective_noun: "Parther"
- arab: "Arab"
+ #arab: "Arab"
  arab_prefix: "Arabian"
  arab_collective_noun: "Arabs"
  minaean: "Minaean"
@@ -391,15 +391,9 @@
  bedouin:0 "Bedouin"
  bedouin_prefix:0 "Bedouin"
  bedouin_collective_noun:1 "Bedouins"
- berber:0 "Berber"
- berber_prefix:0 "Berbero"
- berber_collective_noun:1 "Berbers"
  levantine:1 "Mashriqi"
  levantine_prefix:0 "Mashriqi"
  levantine_collective_noun:2 "Mashriqis"
- egyptian:0 "Egyptian"
- egyptian_prefix:0 "Egypto"
- egyptian_collective_noun:1 "Egyptians"
  andalusian:0 "Andalusian"
  andalusian_prefix:0 "Andaluso"
  andalusian_collective_noun:1 "Andalusians"
@@ -427,9 +421,6 @@
  armenian:0 "Armenian"
  armenian_prefix:0 "Armeno"
  armenian_collective_noun:1 "Armenians"
- greek:0 "Greek"
- greek_prefix:0 "Greco"
- greek_collective_noun:1 "Greeks"
  alan:0 "Alan"
  alan_prefix:0 "Alano"
  alan_collective_noun:1 "Alans"
@@ -477,15 +468,9 @@
  irish:0 "Irish"
  irish_prefix:0 "Hiberno"
  irish_collective_noun:0 "Irish"
- gaelic:0 "Gaelic"
- gaelic_prefix:0 "Gaelo"
- gaelic_collective_noun:0 "Gaels"
  #Brythonic group
  brythonic_group:0 "Brythonic"
  brythonic_group_collective_noun:0 "Brythons"
- pictish:0 "Pictish"
- pictish_prefix:0 "Picto"
- pictish_collective_noun:1 "Picts"
  welsh:0 "Welsh"
  welsh_prefix:0 "Welsh"
  welsh_collective_noun:0 "Welsh"
@@ -561,9 +546,6 @@
  ethiopian:0 "Ethiopian"
  ethiopian_prefix:0 "Abyssino"
  ethiopian_collective_noun:1 "Ethiopians"
- nubian:0 "Nubian"
- nubian_prefix:0 "Nubian"
- nubian_collective_noun:1 "Nubians"
  welayta:0 "Welayta"
  welayta_prefix:0 "Welayto"
  welayta_collective_noun:0 "Welaytas"
@@ -747,9 +729,6 @@
  #Iranian group
  iranian_group:0 "Iranian"
  iranian_group_collective_noun:0 "Iranians"
- persian:0 "Persian"
- persian_prefix:0 "Perso"
- persian_collective_noun:1 "Persians"
  sogdian:0 "Sogdian"
  sogdian_prefix:0 "Sogdo"
  sogdian_collective_noun:1 "Sogdians"
@@ -804,9 +783,6 @@
  roman:0 "Roman"
  roman_prefix:0 "Romano"
  roman_collective_noun:1 "Romans"
- sardinian:0 "Sardinian"
- sardinian_prefix:0 "Sardino"
- sardinian_collective_noun:0 "Sardinians"
  sicilian:0 "Sicilian"
  sicilian_prefix:0 "Sicilo"
  sicilian_collective_noun:0 "Sicilians"
